@@ -261,6 +261,19 @@ final public class XMLWriter {
 
 
 
+  /**
+   * Begins the writing of an XML tag output, using the provided 
+   * <code>tag</code> as the name, with an optional <code>name</code>
+   * attribute, set to the provided value of name. If <code>closeTag</code> is
+   * set to true, then the tag is written with no internal text value.
+   * 
+   * @param tag The name of the XML tag to write.
+   * @param name If provided (not set to null), a &quot;name&quot; attribute is
+   * written to the tag, with the value set to the provided parameter.
+   * @param closeTag If set to true, then the tag is closed, without writing any
+   * internal text value.
+   * @throws IOException If the underlying {@link #writer} throws an Exception.
+   */
   public void startTag(String tag, String name, boolean closeTag) throws IOException {
     if (doIndent) indent();
 
